BSE: compile bsemidicontroller as C++ source

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -73,7 +73,7 @@ bse_sources = $(strip \
 	bsedatapocket.cc	bseeditablesample.cc	bseenums.cc			bsegconfig.cc \
 	bseglobals.cc		bseglue.cc		bseitem.cc			bsejanitor.cc \
 	bsemain.cc		bsemath.cc		bsemathsignal.cc		bseladspa.cc \
-	bsemidicontroller.c	bsemididevice.c 	bsedevice.cc 			\
+	bsemidicontroller.cc	bsemididevice.c 	bsedevice.cc 			\
 	bsemididevice-null.c	bsemididevice-oss.c	bsemidievent.c			bsemidinotifier.c \
 	bsemidireceiver.cc	bsemidisynth.c		bseobject.c			bsepart.c \
 	bsepcminput.c		bsepcmoutput.c		bseparam.c			bseparasite.c \
