--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -105,6 +105,7 @@ $(srcdir)/bsecxxplugin.cc: bsecore.genidl.hh
 bse_idl_sources += bseprobe.idl
 $(srcdir)/bseprobe.cc: bseprobe.genidl.hh
 idl_built_sources = $(bse_idl_sources:.idl=.genidl.hh)
+$(srcdir)/bsebus.cc: bsecore.genidl.hh
 # idl files not used for build rules
 idl_dummy_files = $(strip	\
 	bsecxxmodule.idl	\
